# CPP-07-Part-2-Lesson-10

./: readme.md
HW-1-Simple project/: CMakeLists.txt  main.cpp  readme.md
HW-2-Lil complex project/: CMakeLists.txt  main.cpp  readme.md
